list controller implemented via tdd

--- a/AdventureBuilder/Base.lproj/Main.storyboard
+++ b/AdventureBuilder/Base.lproj/Main.storyboard
@@ -3,11 +3,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--List Booking View Controller-->
         <scene sceneID="YmL-5f-4vQ">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nqt-dl-NiX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="qhR-oG-QGM" userLabel="BookingService" customClass="BookingService" colorLabel="IBBuiltInLabel-Purple"/>
                 <viewController storyboardIdentifier="listBookingViewController" id="pya-mW-9xU" customClass="ListBookingViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="yLl-Gk-NCi"/>
@@ -17,31 +20,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ggd-jf-JuG">
-                                <rect key="frame" x="0.0" y="124" width="600" height="422"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="My Adventures" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBC-Da-VER">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Adventures" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBC-Da-VER">
                                 <rect key="frame" x="243" y="85" width="115" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y0r-Oy-2td">
-                                <rect key="frame" x="405" y="80" width="85" height="30"/>
-                                <state key="normal" title="Do the thing"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gyI-nd-6ys">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem title="Item" id="VsD-CL-MEu"/>
+                                </items>
+                            </toolbar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ggd-jf-JuG">
+                                <rect key="frame" x="0.0" y="124" width="600" height="422"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <action selector="buttonPressed:" destination="pya-mW-9xU" eventType="touchUpInside" id="leD-wz-AIC"/>
+                                    <outlet property="dataSource" destination="pya-mW-9xU" id="Dnv-Cg-r4b"/>
+                                    <outlet property="delegate" destination="pya-mW-9xU" id="SfG-PI-Rbc"/>
                                 </connections>
-                            </button>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gyI-nd-6ys" firstAttribute="leading" secondItem="uoc-ru-1r0" secondAttribute="leadingMargin" constant="-20" id="2TQ-S1-veC"/>
+                            <constraint firstItem="MBC-Da-VER" firstAttribute="centerX" secondItem="uoc-ru-1r0" secondAttribute="centerX" id="Bos-DE-75o"/>
+                            <constraint firstItem="Ggd-jf-JuG" firstAttribute="top" secondItem="MBC-Da-VER" secondAttribute="bottom" constant="18" id="MVb-nW-m0Q"/>
+                            <constraint firstItem="gyI-nd-6ys" firstAttribute="top" secondItem="Ggd-jf-JuG" secondAttribute="bottom" constant="10" id="SK9-R5-O0B"/>
+                            <constraint firstItem="Ggd-jf-JuG" firstAttribute="leading" secondItem="uoc-ru-1r0" secondAttribute="leadingMargin" constant="-20" id="VPP-27-EqR"/>
+                            <constraint firstItem="zBL-Ay-i9F" firstAttribute="top" secondItem="gyI-nd-6ys" secondAttribute="bottom" id="X0L-yD-w4h"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gyI-nd-6ys" secondAttribute="trailing" constant="-20" id="f47-JJ-6m9"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ggd-jf-JuG" secondAttribute="trailing" constant="-20" id="mKC-sY-qZc"/>
+                            <constraint firstItem="MBC-Da-VER" firstAttribute="top" secondItem="yLl-Gk-NCi" secondAttribute="bottom" constant="21" id="uXn-u0-Muy"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="4Rn-Fq-gyB">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="lut-bc-tZX"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="bookingService" destination="qhR-oG-QGM" id="KcP-dy-flb"/>
+                        <outlet property="tableView" destination="Ggd-jf-JuG" id="kzq-1S-lft"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nqt-dl-NiX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1222" y="412"/>
         </scene>
